--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </div>  
             </div>
   
-            <div class="shares" id="share">
+            <section class="hidden">
               <div class="share">
                 <span>Share</span>
                   <ul>
@@ -68,7 +68,7 @@
                     </li>
                   </ul>
               </div>
-            </div>
+            </section>
         </div>
     </main>
 </body>
